[package]
name = "develop"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
watchexec = "1.12.0"

# Size optimizations
# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
codegen-units = 1
